--- a/post.html
+++ b/post.html
@@ -73,5 +73,14 @@
 
         loadPost();
     </script>
+    <div style="background: #111; color: #888; padding: 40px 20px; text-align: center; font-family: sans-serif; font-size: 14px; border-top: 1px solid #222; margin-top: 50px;">
+        <div style="margin-bottom: 20px;">
+            <a href="/about.html" style="color: #ccc; margin: 0 10px; text-decoration: none;">About Us</a>
+            <a href="/contact.html" style="color: #ccc; margin: 0 10px; text-decoration: none;">Contact</a>
+            <a href="/privacy-policy.html" style="color: #ccc; margin: 0 10px; text-decoration: none;">Privacy Policy</a>
+            <a href="/terms.html" style="color: #ccc; margin: 0 10px; text-decoration: none;">Terms of Service</a>
+        </div>
+        <p>&copy; 2026 Korea Decode. All rights reserved.</p>
+    </div>
 </body>
 </html>
