refactor(admin): Implement ES module structure for auth flow

--- a/admin/index.html
+++ b/admin/index.html
@@ -539,11 +539,7 @@
         </div>
     </div>
 
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-storage.js"></script>
-    <script src="/js/firebase-config.js"></script>
-    <script src="/admin/admin.js"></script>
+    <!-- All scripts are now loaded as modules from within admin.js -->
+    <script type="module" src="/admin/admin.js"></script>
 </body>
 </html>
