--- a/admin/index.html
+++ b/admin/index.html
@@ -226,8 +226,8 @@
             <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 30px;">
                 <h1 id="writer-heading">AI Content Creator</h1>
                 <div style="display: flex; gap: 10px;">
-                    <button class="btn btn-outline" onclick="resetAI()"><i class="ph ph-plus"></i> New Post</button>
-                    <button class="btn btn-ai" id="btn-seo-polish" onclick="runSEOPolish()"><i class="ph ph-sparkle"></i> AI SEO Polish</button>
+                    <button id="btn-reset-ai" class="btn btn-outline"><i class="ph ph-plus"></i> New Post</button>
+                    <button id="btn-seo-polish" class="btn btn-ai"><i class="ph ph-sparkle"></i> AI SEO Polish</button>
                 </div>
             </div>
 
@@ -263,7 +263,7 @@
                             <label class="form-label">Topic Idea (Korean or English)</label>
                             <textarea id="ai-topic" class="form-textarea" rows="3" placeholder="Example: Best Street Food in Myeongdong"></textarea>
                         </div>
-                        <button class="btn btn-ai" style="width: 100%;" onclick="runAIPhase1()">
+                        <button id="btn-run-ai-phase1" class="btn btn-ai" style="width: 100%;">
                             <i class="ph ph-brain"></i> Generate Plan
                         </button>
                     </div>
@@ -280,7 +280,7 @@
                             <label class="form-label">Keywords</label>
                             <div id="ai-keywords-container"></div>
                         </div>
-                        <button class="btn btn-primary" style="width: 100%;" onclick="runAIPhase2()">
+                        <button id="btn-run-ai-phase2" class="btn btn-primary" style="width: 100%;">
                             <i class="ph ph-pen-nib"></i> Write Full Article
                         </button>
                     </div>
@@ -300,7 +300,7 @@
                             <label class="form-label">Search Replacement</label>
                             <div style="display: flex; gap: 8px;">
                                 <input type="text" id="ai-img-query" class="form-input">
-                                <button class="btn btn-outline" onclick="searchUnsplashAI()">Search</button>
+                                <button id="btn-search-unsplash" class="btn btn-outline">Search</button>
                             </div>
                         </div>
                     </div>
@@ -313,10 +313,10 @@
                         <div style="padding: 16px; border-bottom: 1px solid var(--border); background: var(--bg-input); display: flex; justify-content: space-between; align-items: center;">
                             <span style="font-weight: 600;">Editor</span>
                             <div style="display: flex; gap: 8px;">
-                                <button class="btn btn-outline" style="padding: 6px 12px; font-size: 12px;" onclick="showMobilePreview()">
+                                <button id="btn-show-preview" class="btn btn-outline" style="padding: 6px 12px; font-size: 12px;">
                                     <i class="ph ph-device-mobile"></i> Preview
                                 </button>
-                                <button class="btn btn-primary" id="btn-save-post" style="padding: 6px 12px; font-size: 12px;" onclick="publishPost()">
+                                <button class="btn btn-primary" id="btn-save-post" style="padding: 6px 12px; font-size: 12px;">
                                     <i class="ph ph-paper-plane-right"></i> Publish
                                 </button>
                             </div>
@@ -379,7 +379,7 @@
                             <label class="form-label">Topics</label>
                             <textarea id="auto-topics" class="form-textarea" rows="10"></textarea>
                         </div>
-                        <button class="btn btn-ai" style="width: 100%;" onclick="runAutomation()">
+                        <button id="btn-run-automation" class="btn btn-ai" style="width: 100%;">
                             <i class="ph ph-robot"></i> Schedule All
                         </button>
                     </div>
@@ -401,7 +401,7 @@
             <h1>Legacy Post Migration</h1>
             <div class="card">
                 <div style="margin-bottom: 20px;">
-                    <button class="btn btn-primary" onclick="startMigration()">Start Migration</button>
+                    <button id="btn-start-migration" class="btn btn-primary">Start Migration</button>
                     <span id="migration-status" style="margin-left: 10px; font-weight: bold;"></span>
                 </div>
                 <label class="form-label">Migration Log</label>
@@ -427,10 +427,10 @@
                         <label class="form-label">OpenAI / LLM API Key (Required for AI)</label>
                         <input type="password" id="setting-openai-key" class="form-input" placeholder="sk-...">
                     </div>
-                    <button class="btn btn-primary" onclick="saveSettings()">Save</button>
+                    <button id="btn-save-settings" class="btn btn-primary">Save</button>
                     <hr style="border-top: 1px solid var(--border); margin: 20px 0;">
                     <h3 style="margin-bottom: 10px; color: var(--warning);">Maintenance</h3>
-                    <button class="btn btn-outline" style="border-color: var(--warning); color: var(--warning);" onclick="removeDuplicates()">Remove Duplicate Posts</button>
+                    <button id="btn-remove-duplicates" class="btn btn-outline" style="border-color: var(--warning); color: var(--warning);">Remove Duplicate Posts</button>
                 </div>
 
                 <!-- Persona Settings -->
@@ -501,8 +501,8 @@
                             <textarea id="p-bio" class="form-textarea" rows="3" placeholder="Click 'AI Generate' or write your own..."></textarea>
                         </div>
 
-                        <button class="btn btn-primary" style="width: 100%;" id="btn-save-persona" onclick="createPersona()">Add Persona</button>
-                        <button class="btn btn-outline" style="width: 100%; margin-top: 8px; display: none;" id="btn-cancel-persona" onclick="resetPersonaForm()">Cancel Edit</button>
+                        <button id="btn-save-persona" class="btn btn-primary" style="width: 100%;">Add Persona</button>
+                        <button id="btn-cancel-persona" class="btn btn-outline" style="width: 100%; margin-top: 8px; display: none;">Cancel Edit</button>
                     </div>
                 </div>
             </div>
@@ -515,7 +515,7 @@
         <div class="modal-box">
             <div style="display: flex; justify-content: space-between; margin-bottom: 16px;">
                 <h3 style="margin: 0;">Unsplash Images</h3>
-                <button class="btn btn-outline" style="padding: 4px 10px;" onclick="closeModal('modal-unsplash')"><i class="ph ph-x"></i></button>
+                <button id="btn-close-unsplash" class="btn btn-outline" style="padding: 4px 10px;"><i class="ph ph-x"></i></button>
             </div>
             <div id="unsplash-results" class="modal-grid"></div>
         </div>
@@ -534,7 +534,7 @@
                 <div id="prev-content"></div>
             </div>
             <div style="padding: 15px; background: #f9f9f9; text-align: center;">
-                <button class="btn btn-primary" onclick="closeModal('modal-preview')" style="width: 100%;">Close</button>
+                <button id="btn-close-preview" class="btn btn-primary" style="width: 100%;">Close</button>
             </div>
         </div>
     </div>
