refactor(admin): Migrate from OpenAI to Gemini API

--- a/admin/index.html
+++ b/admin/index.html
@@ -424,8 +424,8 @@
                 <div class="card">
                     <h3>General</h3>
                     <div class="form-group">
-                        <label class="form-label">OpenAI / LLM API Key (Required for AI)</label>
-                        <input type="password" id="setting-openai-key" class="form-input" placeholder="sk-...">
+                        <label class="form-label">Gemini API Key (Required for AI)</label>
+                        <input type="password" id="setting-gemini-key" class="form-input" placeholder="AIza...">
                     </div>
                     <button id="btn-save-settings" class="btn btn-primary">Save</button>
                     <hr style="border-top: 1px solid var(--border); margin: 20px 0;">
