fix(admin): update Gemini model to 1.5-flash-002 and add cache busting

--- a/admin/index.html
+++ b/admin/index.html
@@ -549,6 +549,6 @@
     </div>
 
     <!-- All scripts are now loaded as modules from within admin.js -->
-    <script type="module" src="/admin/admin.js"></script>
+    <script type="module" src="/admin/admin.js?v=2"></script>
 </body>
 </html>
