--- a/admin/index.html
+++ b/admin/index.html
@@ -436,6 +436,10 @@
                         <label class="form-label">Gemini API Key (Required for AI)</label>
                         <input type="password" id="setting-gemini-key" class="form-input" placeholder="AIza...">
                     </div>
+                    <div class="form-group">
+                        <label class="form-label">OpenAI API Key (Optional Fallback)</label>
+                        <input type="password" id="setting-openai-key" class="form-input" placeholder="sk-...">
+                    </div>
                     <button id="btn-save-settings" class="btn btn-primary">Save</button>
                     <hr style="border-top: 1px solid var(--border); margin: 20px 0;">
                     <h3 style="margin-bottom: 10px; color: var(--warning);">Maintenance</h3>
@@ -549,6 +553,6 @@
     </div>
 
     <!-- All scripts are now loaded as modules from within admin.js -->
-    <script type="module" src="/admin/admin.js?v=3"></script>
+    <script type="module" src="/admin/admin.js?v=4"></script>
 </body>
 </html>
